--- a/package.json
+++ b/package.json
@@ -3,9 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "firebase": "^5.3.0",
+    "materialize-css": "^1.0.0-alpha.4",
+    "mdbreact": "^4.18.1",
+    "moment": "^2.24.0",
+    "nodemailer": "^6.3.0",
+    "react": "^16.4.1",
+    "react-accessible-accordion": "^3.0.0",
+    "react-collapsy": "0.0.10",
+    "react-dom": "^16.4.1",
+    "react-modal": "^3.8.1",
+    "react-ravepayment": "^2.0.8",
+    "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.1.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.8",
+    "react-table": "^6.10.0",
+    "react-toastify": "^5.1.0",
+    "redux": "^4.0.0",
+    "redux-firestore": "^0.5.7",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.14.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,7 +33,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "jsx-a11y/anchor-is-valid": "off"
+    }
   },
   "browserslist": [
     ">0.2%",
