--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "IbomKopa",
+  "name": "IbomKopa CDS",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "image/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    }
+    },
+    {
+      "src": "image/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+  },
+  {
+      "src": "image/android-chrome-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+  }
   ],
+  "theme_color": "#da532c",
+  "background_color": "#da532c",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "any"
 }
