--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,11 @@
       "src": "image/android-chrome-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
+  },
+  {
+      "src": "image/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
   }
   ],
   "theme_color": "#da532c",
