--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@firebase/messaging": "^0.4.10",
     "firebase-admin": "^8.3.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "firebase-messaging": "^1.0.6"
   },
   "engines": {
     "node": "8"
