--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-redux-firebase": "^2.1.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-scroll-up-button": "^1.6.4",
     "react-table": "^6.10.0",
     "react-toastify": "^5.1.0",
     "redux": "^4.0.0",
     "redux-firestore": "^0.5.7",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.3",
     "xlsx": "^0.14.3"
   },
   "scripts": {
